--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -90,3 +90,10 @@
 .highlight-text {
   color: $color-light;
 }
+
+.technologies__item {
+  color: $bg-color;
+  font-size: 1.8rem;
+  font-weight: 400;
+  letter-spacing: 0.3px;
+}
