--- a/sass/_miscellaneous.scss
+++ b/sass/_miscellaneous.scss
@@ -128,6 +128,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin-bottom: 2rem;
 
   &__item:not(:last-child) {
     margin-right: 1rem;
