--- a/css/style.css
+++ b/css/style.css
@@ -661,7 +661,7 @@ body::before {
       opacity: 0;
       transition: all 0.3s ease-in; }
   .portfolio-block__img-1 {
-    background-image: url(../img/xwork-1.jpg); }
+    background-image: url(../img/todo-app.jpg); }
   .portfolio-block__img-2 {
     background-image: url(../img/xwork-2.jpg); }
   .portfolio-block__img-3 {
