--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -116,7 +116,7 @@
   }
 
   &__img-1 {
-    background-image: url(../img/xwork-1.jpg);
+    background-image: url(../img/todo-app.jpg);
   }
 
   &__img-2 {
