Add todo app in the portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -663,7 +663,7 @@ body::before {
   .portfolio-block__img-1 {
     background-image: url(../img/forkify-app.jpg); }
   .portfolio-block__img-2 {
-    background-image: url(../img/xwork-2.jpg); }
+    background-image: url(../img/todo-app.jpg); }
   .portfolio-block__img-3 {
     background-image: url(../img/xwork-3.jpg); }
   .portfolio-block__details-box {
