--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -120,7 +120,7 @@
   }
 
   &__img-2 {
-    background-image: url(../img/xwork-2.jpg);
+    background-image: url(../img/todo-app.jpg);
   }
 
   &__img-3 {
