--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -124,7 +124,7 @@
   }
 
   &__img-3 {
-    background-image: url(../img/xwork-3.jpg);
+    background-image: url(../img/nexter.jpg);
   }
 
   &__details-box {
