--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -455,36 +455,38 @@ body::before {
   grid-column: grid-col-start / col-end 5;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center;
+  width: 80%; }
   @media only screen and (max-width: 52.5em) {
     .about__picture {
       grid-column: grid-col-start / grid-col-end;
       width: 100%; } }
   .about__picture--img {
     display: block;
-    width: auto;
-    max-height: 567px;
+    max-width: 90%;
     filter: grayscale(3);
     z-index: -1;
     transition: all 0.25s ease-out; }
+    @media only screen and (max-width: 58.125em) {
+      .about__picture--img {
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+        z-index: 1; } }
     @media only screen and (max-width: 52.5em) {
       .about__picture--img {
-        max-width: 95%;
-        height: auto;
+        max-width: 85%;
         display: flex;
         justify-content: center;
         z-index: 1; } }
     @media only screen and (max-width: 34.375em) {
       .about__picture--img {
+        max-width: 95%;
         transition: none; } }
 
 .about__content {
-  grid-column: col-start 6 / col-end 12;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  align-items: center;
-  justify-content: center; }
+  grid-column: col-start 6 / col-end 12; }
   @media only screen and (max-width: 52.5em) {
     .about__content {
       grid-column: col-start 2 / col-end 11; } }
@@ -495,8 +497,7 @@ body::before {
     grid-column: 1 / -1;
     grid-row: 1 / span 1;
     justify-self: start;
-    align-self: start;
-    line-height: 0.4; }
+    align-self: start; }
     @media only screen and (max-width: 58.125em) {
       .about__content--heading {
         font-size: 12rem; } }
@@ -507,18 +508,19 @@ body::before {
   .about__content--detail {
     grid-column: 1 / -1;
     grid-row: 1 / -1;
-    justify-self: start;
-    align-self: start;
-    padding: 3rem 7rem;
+    padding: 0rem 5rem;
     display: grid;
     grid-template-columns: 1fr;
-    grid-gap: 2.3rem; }
+    grid-gap: 2.3rem;
+    margin-top: -5.1rem; }
     @media only screen and (max-width: 52.5em) {
       .about__content--detail {
-        padding: 2rem 7rem; } }
+        padding: 0 7rem;
+        margin-top: -4rem; } }
     @media only screen and (max-width: 34.375em) {
       .about__content--detail {
-        padding: 2rem 3rem; } }
+        padding: 0 3rem;
+        margin-top: -3.5rem; } }
   .about__content--icon-item {
     margin-right: 2rem; }
   .about__content--link {
@@ -627,7 +629,26 @@ body::before {
     z-index: 1;
     backface-visibility: hidden;
     transition: all 0.25s ease-out;
-    transform: translateY(200px); }
+    transform: translateY(200px);
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    position: relative; }
+    .portfolio-block__img-box::after {
+      content: "";
+      position: absolute;
+      background-color: #121212;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      opacity: 0;
+      transition: all 0.3s ease-in; }
+    .portfolio-block__img-box:hover::after {
+      opacity: 0.6; }
+    .portfolio-block__img-box:hover .portfolio-block__img {
+      transform: scale(1.05); }
     @media only screen and (max-width: 52.5em) {
       .portfolio-block__img-box {
         width: 90%;
@@ -640,32 +661,12 @@ body::before {
     display: block;
     position: relative;
     width: 100%;
+    object-fit: cover;
     height: 100%;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
     transition: all 0.3s ease-in;
-    backface-visibility: hidden; }
-    .portfolio-block__img:hover {
-      transform: scale(1.05); }
-    .portfolio-block__img:hover::before {
-      opacity: 0.6; }
-    .portfolio-block__img::before {
-      content: "";
-      position: absolute;
-      background-color: #121212;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      opacity: 0;
-      transition: all 0.3s ease-in; }
-  .portfolio-block__img-1 {
-    background-image: url(../img/forkify-app.jpg); }
-  .portfolio-block__img-2 {
-    background-image: url(../img/todo-app.jpg); }
-  .portfolio-block__img-3 {
-    background-image: url(../img/xwork-3.jpg); }
+    backface-visibility: hidden;
+    grid-row: 1 /-1;
+    grid-column: 1 /-1; }
   .portfolio-block__details-box {
     width: 62%;
     display: flex;
