add pig game to portfolio

--- a/sass/_miscellaneous.scss
+++ b/sass/_miscellaneous.scss
@@ -93,6 +93,10 @@
   display: inline-block;
 }
 
+.misc__read-more {
+  margin-bottom: 2rem;
+}
+
 .collapsible {
   max-height: 0;
   overflow: hidden;
