--- a/sass/_portfolio.scss
+++ b/sass/_portfolio.scss
@@ -87,6 +87,7 @@
       width: 90%;
       height: 300px;
       transform: none;
+      transition: none;
     }
 
     @media only screen and (max-width: $bp-small) {
