--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -31,6 +31,7 @@
         display: flex;
         justify-content: center;
         z-index: 1;
+        transition: none;
       }
       @media only screen and (max-width: $bp-small) {
         max-width: 95%;
